innapropriately had display flex set on entire body, removed and fixed gap between footer and bottom of viewport

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,13 +1,28 @@
 .container {
     display: flex;
     align-items: flex-end;
+    justify-content: center;
     width: 100vw;
     height: 430px;
+    position: relative;
+}
+
+.vector{
+    position: absolute;
+    right: 0%;
+    bottom: 0%;
+    width: 100vw;
+    height: 100%;
+    z-index: 0;
 }
 
 .row{
     display: flex;
     flex-direction: row;
+    align-items: flex-end;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
 }
 
 .subRow {
@@ -22,7 +37,7 @@
 .footerColumn1 {
     display: flex;
     flex-direction: column;
-    justify-self: center;
+    justify-content: center;
     align-items: center;
     width: 40vw;
     height: 50%;
@@ -33,7 +48,7 @@
 .footerColumn2 {
     display: flex;
     flex-direction: column;
-    justify-self: center;
+    justify-content: center;
     align-items: center;
     width: 60vw;
     height: 50%;
