--- a/styles/global.css
+++ b/styles/global.css
@@ -18,11 +18,7 @@
 
 html,
 body {
-  display: flex;
   width: 100vw;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   gap: 20px;
   padding: 0;
   margin: 0;
